--- a/cloud-consumer-feign-hystrix-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-hystrix-order80/src/main/resources/application.yml
@@ -3,10 +3,12 @@ server:
 
 spring:
   application:
-    name: cloud-order-com.lis1.springcloud.service
+    name: cloud-consumer-feign-hysterix-order-com.lis1.springcloud.service
 
 
 eureka:
+  instance:
+    instance-id: cloud-consumer-feign-hystrix-order80
   client:
     # 表示是否将自己注册进EurekaServer 默认为true
     register-with-eureka: true
@@ -14,6 +16,8 @@ eureka:
     fetch-registry: true
     serviceUrl:
       # 集群版
-      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
-      #集群版
-#      defaultZone: http://localhost:7001/eureka
+#      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+      # 单机版
+      defaultZone: http://localhost:7001/eureka
+
+
