--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -7,11 +7,15 @@ spring:
     name: cloud-gateway
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true  # 开启从注册中心动态创建路由的功能，利用微服务名称进行路由
       routes:
               # 路由的ID，没有固定规则但要求唯一，建议配合服务名
         - id: payment_routh
               # 匹配后提供服务的路由地址
-          uri: http://localhost:8001
+          #uri: http://localhost:8001
+          uri: lb://CLOUD-PAYMENT-COM.LIS1.SPRINGCLOUD.SERVICE # 匹配后提供的动态路由地址
               # 断言，路径相匹配的进行路劲
           predicates:
             - Path=/payment/get/**
@@ -19,8 +23,9 @@ spring:
               # 路由的ID，没有固定规则但要求唯一，建议配合服务名
         - id: payment_routh2
               # 匹配后提供服务的路由地址
-          uri: http://localhost:8001
-              # 断言，路径相匹配的进行路劲
+          #uri: http://localhost:8001
+          uri: lb://CLOUD-PAYMENT-COM.LIS1.SPRINGCLOUD.SERVICE # 匹配后提供的动态路由地址
+          # 断言，路径相匹配的进行路劲
           predicates:
             - Path=/payment/lb/**
 
