--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
               # 断言，路径相匹配的进行路劲
           predicates:
             - Path=/payment/get/**
+#           - Before=2022-08-23T17:30:03.439+08:00[Asia/Shanghai]   # Before表示在指定时间之前该配置生效
+#           - After=2022-08-23T17:20:03.439+08:00[Asia/Shanghai]    # After表示在指定时间之后该配置才生效
+#           - BetWeen=2022-08-23T17:20:03.439+08:00[Asia/Shanghai],2022-08-23T17:30:03.439+08:00[Asia/Shanghai]   # Between表示在两个指定时间之间该配置才生效
+            - Cookie=username,lis1
 
               # 路由的ID，没有固定规则但要求唯一，建议配合服务名
         - id: payment_routh2
@@ -28,6 +32,7 @@ spring:
           # 断言，路径相匹配的进行路劲
           predicates:
             - Path=/payment/lb/**
+            - After=2022-08-23T17:25:03.439+08:00[Asia/Shanghai] # After表示在指定时间之后该配置才生效
 
 eureka:
   instance:
